--- a/Milestone_2/Module_07/02_CSS Overflow visible, hidden, scroll, text-overflow, ellipsis/overflow.html
+++ b/Milestone_2/Module_07/02_CSS Overflow visible, hidden, scroll, text-overflow, ellipsis/overflow.html
@@ -13,6 +13,8 @@
         }
         .small_box{
             border: 3px solid aqua;
+            height: 250px;
+            overflow-y: scroll;
         }
         .mini_text{
             width: 300px;
