--- a/Milestone_3/Module_12.5/01_About Module.html
+++ b/Milestone_3/Module_12.5/01_About Module.html
@@ -7,12 +7,18 @@
     <title>About Module</title>
 </head>
 <body>
-    <div class="question">
+    <div class="video">
         <h2>01.When to use bootstrap and when to use vanilla css
         </h2>
         <ul>
-            <li>Short and medium Project use bootstrap</li>
-            <li>Complate the project in a short time use bootstrap</li>
+            <li>Ready for Leader Board by Bootstrap</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>02.Create a navbar with proper alignment using bootstrap
+        </h2>
+        <ul>
+            <li>Navbar Coading</li>
         </ul>
     </div>
 
