--- a/Milestone_3/Module_12.5/01_About Module.html
+++ b/Milestone_3/Module_12.5/01_About Module.html
@@ -21,6 +21,13 @@
             <li>Navbar Coading</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.Create responsive grid with gutters and spacing
+        </h2>
+        <ul>
+            <li>Player section coading</li>
+        </ul>
+    </div>
 
 </body>
 </html>
