--- a/Milestone_3/Module_12.5/index.html
+++ b/Milestone_3/Module_12.5/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-<body>
+<body style="background-color: #f3f1ff;">
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #562EFF;">
             <div class="container">
@@ -41,10 +41,42 @@
           </nav>
     </header>
     <main>
+        <section class="container bg-white rounded my-4">
+            <div>
+                <h4 class="text-primary py-3">Top Player</h4>
+                <div class="row gy-4 pb-4">
+                    <div class="d-flex align-items-center col-lg-4 col-md-6 col-12">
+                        <img width="56px" src="assets/img/players/player-1.png" alt="">
+                        <h4 class="ms-3">John Smit</h4>
+                    </div>
+                    <div class="d-flex align-items-center col-lg-4 col-md-6 col-12">
+                        <img width="56px" src="assets/img/players/player-2.png" alt="">
+                        <h4 class="ms-3">Pro Rasel</h4>
+                    </div>
+                    <div class="d-flex align-items-center col-lg-4 col-md-6 col-12">
+                        <img width="56px" src="assets/img/players/player-3.png" alt="">
+                        <h4 class="ms-3">Abu Sufian</h4>
+                    </div>
+                    <div class="d-flex align-items-center col-lg-4 col-md-6 col-12">
+                        <img width="56px" src="assets/img/players/player-4.png" alt="">
+                        <h4 class="ms-3">Shajedul Karim</h4>
+                    </div>
+                    <div class="d-flex align-items-center col-lg-4 col-md-6 col-12">
+                        <img width="56px" src="assets/img/players/player-5.png" alt="">
+                        <h4 class="ms-3">Maruf Ahmed</h4>
+                    </div>
+                    <div class="d-flex align-items-center col-lg-4 col-md-6 col-12">
+                        <img width="56px" src="assets/img/players/player-6.png" alt="">
+                        <h4 class="ms-3">Mujahid</h4>
+                    </div>
+                </div>
+                <hr>
+            </div>
+        </section>
 
     </main>
     <footer>
-        
+
     </footer>
     
     <!-- Bootstrap JS -->
