blog section complate

--- a/Milestone_3/Module_12.5/01_About Module.html
+++ b/Milestone_3/Module_12.5/01_About Module.html
@@ -25,7 +25,14 @@
         <h2>03.Create responsive grid with gutters and spacing
         </h2>
         <ul>
-            <li>Player section coading</li>
+            <li>Player section coading  </li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>03.Apply nesting rows for responsive top blogs
+        </h2>
+        <ul>
+            <li>Blog Section  </li>
         </ul>
     </div>
 
