--- a/Milestone_3/Module_12.5/index.html
+++ b/Milestone_3/Module_12.5/index.html
@@ -71,6 +71,63 @@
                     </div>
                 </div>
                 <hr>
+                <div>
+                  <h4 class="text-primary py-3">Top Blog</h4>
+                  <div class="row g-4 pb-4">
+                    <div class="col-lg-6 d-flex">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <img class="img-fluid" src="assets/img/blogs/blog-1.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                          <div class="ps-2">
+                            <h4>13 of My Favorite UI/UX Goodies</h4>
+                            <p class="text-secondary">by <a class="text-decoration-none" href="">Danny Sapio</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 d-flex">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <img class="img-fluid" src="assets/img/blogs/blog-2.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                          <div class="ps-2">
+                            <h4>UI cheat sheet: list vs grids</h4>
+                            <p class="text-secondary">by <a class="text-decoration-none" href="">Tess Gadd</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 d-flex">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <img class="img-fluid" src="assets/img/blogs/blog-3.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                          <div class="ps-2">
+                            <h4>7 typography tips for interface design</h4>
+                            <p class="text-secondary">by <a class="text-decoration-none" href="">Jeremiah Lam</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-lg-6 d-flex">
+                      <div class="row">
+                        <div class="col-md-4">
+                          <img class="img-fluid" src="assets/img/blogs/blog-4.png" alt="">
+                        </div>
+                        <div class="col-md-6">
+                          <div class="ps-2">
+                            <h4>Your logo is copied</h4>
+                            <p class="text-secondary">by <a class="text-decoration-none" href="">Ferdinand Vogler</a></p>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
             </div>
         </section>
 
