--- a/Milestone_3/Module_12.5/index.html
+++ b/Milestone_3/Module_12.5/index.html
@@ -7,6 +7,8 @@
     <title>Leader Board Bootstrap</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/ab4a239ae2.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #f3f1ff;">
     <header>
@@ -41,6 +43,7 @@
           </nav>
     </header>
     <main>
+      <!-- Top area section -->
         <section class="container bg-white rounded my-4">
             <div>
                 <h4 class="text-primary py-3">Top Player</h4>
@@ -77,7 +80,7 @@
                     <div class="col-lg-6 d-flex">
                       <div class="row">
                         <div class="col-md-4">
-                          <img class="img-fluid" src="assets/img/blogs/blog-1.png" alt="">
+                          <img class="img-fluid pb-4" src="assets/img/blogs/blog-1.png" alt="">
                         </div>
                         <div class="col-md-6">
                           <div class="ps-2">
@@ -90,7 +93,7 @@
                     <div class="col-lg-6 d-flex">
                       <div class="row">
                         <div class="col-md-4">
-                          <img class="img-fluid" src="assets/img/blogs/blog-2.png" alt="">
+                          <img class="img-fluid pb-4" src="assets/img/blogs/blog-2.png" alt="">
                         </div>
                         <div class="col-md-6">
                           <div class="ps-2">
@@ -103,7 +106,7 @@
                     <div class="col-lg-6 d-flex">
                       <div class="row">
                         <div class="col-md-4">
-                          <img class="img-fluid" src="assets/img/blogs/blog-3.png" alt="">
+                          <img class="img-fluid pb-4" src="assets/img/blogs/blog-3.png" alt="">
                         </div>
                         <div class="col-md-6">
                           <div class="ps-2">
@@ -116,7 +119,7 @@
                     <div class="col-lg-6 d-flex">
                       <div class="row">
                         <div class="col-md-4">
-                          <img class="img-fluid" src="assets/img/blogs/blog-4.png" alt="">
+                          <img class="img-fluid pb-4" src="assets/img/blogs/blog-4.png" alt="">
                         </div>
                         <div class="col-md-6">
                           <div class="ps-2">
@@ -130,7 +133,99 @@
                 </div>
             </div>
         </section>
+      <!-- Top area section -->
 
+      <!-- Botton area section -->
+        <section class="bg-white rounded p-4 mb-5">
+          <h3 class="text-primary mb-4">Lates Courses</h3>
+          <div class="row g-4">
+              <!-- single course -->
+              <div class="col-md-6 col-lg-4">
+                  <div class="shadow-lg rounded p-3">
+                      <img class="img-fluid" src="assets/img/courses/course-1.png" alt="">
+                      <div class="my-3">
+                          <h4>The Complete JavaScript Course 2021</h4>
+                          <a href="#" class="text-danger text-decoration-none">Reed Krakoff</a>
+                      </div>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <div class="d-flex">
+                              <div>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-secondary"></i>
+                              </div>
+                              <p class="ms-2 text-secondary">4.5</p>
+                          </div>
+                          <div class="badge rounded-pill bg-light text-danger py-2">
+                              <i class="far fa-clock"></i>
+                              <span>01:30 hr</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!--single course -->
+
+              <!-- single course -->
+              <div class="col-md-6 col-lg-4">
+                  <div class="shadow-lg rounded p-3">
+                      <img class="img-fluid" src="assets/img/courses/course-2.png" alt="">
+                      <div class="my-3">
+                          <h4>The Complete JavaScript Course 2021</h4>
+                          <a href="#" class="text-danger text-decoration-none">Reed Krakoff</a>
+                      </div>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <div class="d-flex">
+                              <div>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-secondary"></i>
+                              </div>
+                              <p class="ms-2 text-secondary">4.5</p>
+                          </div>
+                          <div class="badge rounded-pill bg-light text-danger py-2">
+                              <i class="far fa-clock"></i>
+                              <span>01:30 hr</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!--single course -->
+
+              <!-- single course -->
+              <div class="col-md-6 col-lg-4">
+                  <div class="shadow-lg rounded p-3">
+                      <img class="img-fluid" src="assets/img/courses/course-1.png" alt="">
+                      <div class="my-3">
+                          <h4>The Complete JavaScript Course 2021</h4>
+                          <a href="#" class="text-danger text-decoration-none">Reed Krakoff</a>
+                      </div>
+                      <div class="d-flex justify-content-between align-items-center">
+                          <div class="d-flex">
+                              <div>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-warning"></i>
+                                  <i class="fas fa-star text-secondary"></i>
+                              </div>
+                              <p class="ms-2 text-secondary">4.5</p>
+                          </div>
+                          <div class="badge rounded-pill bg-light text-danger py-2">
+                              <i class="far fa-clock"></i>
+                              <span>01:30 hr</span>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <!--single course -->
+
+          </div>
+      </section>
+      <!--Botton area Section -->
     </main>
     <footer>
 
