bootstrap overview and course section

--- a/Milestone_3/Module_12.5/01_About Module.html
+++ b/Milestone_3/Module_12.5/01_About Module.html
@@ -29,10 +29,17 @@
         </ul>
     </div>
     <div class="video">
-        <h2>03.Apply nesting rows for responsive top blogs
+        <h2>04.Apply nesting rows for responsive top blogs
         </h2>
         <ul>
             <li>Blog Section  </li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>05.Write Bootstrap summary and CSS measuring Unit
+        </h2>
+        <ul>
+            <li>Bootstrap Overview</li>
         </ul>
     </div>
 
