--- a/Milestone_3/Module_12.5/index.html
+++ b/Milestone_3/Module_12.5/index.html
@@ -136,7 +136,7 @@
       <!-- Top area section -->
 
       <!-- Botton area section -->
-        <section class="bg-white rounded p-4 mb-5">
+        <section class="container bg-white rounded my-4 p-4">
           <h3 class="text-primary mb-4">Lates Courses</h3>
           <div class="row g-4">
               <!-- single course -->
