--- a/Milestone_3/Module_13/01_About Module 13.html
+++ b/Milestone_3/Module_13/01_About Module 13.html
@@ -14,6 +14,13 @@
             <li>Ready for project</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>01.Container, set navbar, set navbar logo image
+        </h2>
+        <ul>
+            <li>Navber Complate</li>
+        </ul>
+    </div>
 
 </body>
 </html>
