--- a/Milestone_3/Module_13/index.html
+++ b/Milestone_3/Module_13/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header Start -->
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light ">
+        <nav style="padding: 0px;" class="navbar navbar-expand-lg navbar-light ">
             <div class="container bg-light">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
