video:3 slider area compalte

--- a/Milestone_3/Module_13/01_About Module 13.html
+++ b/Milestone_3/Module_13/01_About Module 13.html
@@ -15,10 +15,17 @@
         </ul>
     </div>
     <div class="video">
-        <h2>01.Container, set navbar, set navbar logo image
+        <h2>02.Container, set navbar, set navbar logo image
         </h2>
         <ul>
             <li>Navber Complate</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>03.Set top banner carousel, image slider, custom rows
+        </h2>
+        <ul>
+            <li>Slider area Complate</li>
         </ul>
     </div>
 
