--- a/Milestone_3/Module_13/01_About Module 13.html
+++ b/Milestone_3/Module_13/01_About Module 13.html
@@ -28,6 +28,13 @@
             <li>Slider area Complate</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>04.Categories, gutters, flex vertical center and sound space
+        </h2>
+        <ul>
+            <li>Catagory area Complate</li>
+        </ul>
+    </div>
 
 </body>
 </html>
