--- a/Milestone_3/Module_13/index.html
+++ b/Milestone_3/Module_13/index.html
@@ -100,6 +100,34 @@
     </header>
     <!-- Header End -->
     
+    <!-- Main Start -->
+    <main>
+        <!-- Catagory Start -->
+        <section class="container my-5">
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 col-12 ">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Watch</h1>
+                        <img src="images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 border bg-primary d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Bag</h1>
+                        <img src="images/categories/bag.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-12">
+                    <div class="p-3 border bg-success d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Shoes</h1>
+                        <img src="images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- Main End -->
+    
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
