video:6 Subscribe and Footer area Complate

--- a/Milestone_3/Module_13/01_About Module 13.html
+++ b/Milestone_3/Module_13/01_About Module 13.html
@@ -42,6 +42,13 @@
             <li>Shoe and backpack area Complate</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06.Subscribe section, Footer, text center, id navigation
+        </h2>
+        <ul>
+            <li>Subscribe and Footer area Complate</li>
+        </ul>
+    </div>
 
 </body>
 </html>
