--- a/Milestone_3/Module_13/index.html
+++ b/Milestone_3/Module_13/index.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header Start -->
     <header>
-        <nav style="padding: 0px;" class="navbar navbar-expand-lg navbar-light ">
+        <nav style="padding: 0px;" class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container bg-light">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -28,13 +28,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoes">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                 </ul>
               </div>
@@ -126,7 +126,7 @@
             </div>
         </section>
         <!-- Shoes Start -->
-        <section class="container">
+        <section id="shoes" class="container">
             <h2>Shoes</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -168,7 +168,7 @@
               </div>
         </section>
         <!-- Backpack Start -->
-        <section class="container pt-5">
+        <section id="backpack" class="container py-5">
             <h2>Backpack</h2>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -209,8 +209,24 @@
                 </div>
               </div>
         </section>
+        <!-- Subscribe -->
+        <section id="subscribe" style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center bg-info">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input type="email" name="" id="" placeholder="Type your email">
+                <br>
+                <button class="btn btn-warning" type="submit">Submit</button>
+            </div>
+        </section>
     </main>
     <!-- Main End -->
+
+    <!-- Footer Start -->
+    <footer class="text-center mt-5">
+        <p><small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small></p>
+    </footer>
+    <!-- Footer End -->
     
 
     <!-- Bootstrap JS -->
