video:7 custom css

--- a/Milestone_3/Module_13/01_About Module 13.html
+++ b/Milestone_3/Module_13/01_About Module 13.html
@@ -49,6 +49,13 @@
             <li>Subscribe and Footer area Complate</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>07.Override default bootstrap style using custom CSS
+        </h2>
+        <ul>
+            <li>Custom CSS</li>
+        </ul>
+    </div>
 
 </body>
 </html>
