--- a/Milestone_3/Module_13/index.html
+++ b/Milestone_3/Module_13/index.html
@@ -10,11 +10,14 @@
 
     <!-- Fontawesome CSS -->
     <script src="https://kit.fontawesome.com/ab4a239ae2.js" crossorigin="anonymous"></script>
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Header Start -->
     <header>
-        <nav style="padding: 0px;" class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container">
+          <nav style="padding: 0px;" class="navbar navbar-expand-lg navbar-light fixed-top">
             <div class="container bg-light">
               <a class="navbar-brand" href="#">
                 <img src="images/logo.png" alt="">
@@ -40,18 +43,19 @@
               </div>
             </div>
         </nav>
+      </div>
 
         <!-- Slide Start -->
-        <section class="container">
+        <section class="container pt-5">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner rounded">
                   <div class="carousel-item active">
-                      <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                      <div class="row panda_bg bg-gradient p-5 d-flex align-items-center">
                           <div class="col-lg-7">
                               <h1>Cool Dude Headphone</h1>
                               <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                               <h1>$420</h1>
-                              <button class="btn btn-warning">Bye Now</button>
+                              <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i> </button>
                           </div>
                           <div class="col-lg-5">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -60,12 +64,12 @@
                     
                   </div>
                   <div class="carousel-item">
-                    <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                    <div class="row panda_bg bg-gradient p-5 d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1>$600</h1>
-                            <button class="btn btn-warning">Bye Now</button>
+                            <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                         </div>
                         <div class="col-lg-5">
                           <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
@@ -73,12 +77,12 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <div class="row bg-info bg-gradient p-5 d-flex align-items-center">
+                    <div class="row panda_bg bg-gradient p-5 d-flex align-items-center">
                         <div class="col-lg-7">
                             <h1>Cool Dude Headphone</h1>
                             <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                             <h1>$1200</h1>
-                            <button class="btn btn-warning">Bye Now</button>
+                            <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                         </div>
                         <div class="col-lg-5">
                           <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
@@ -103,7 +107,7 @@
     <!-- Main Start -->
     <main>
         <!-- Catagory Start -->
-        <section class="container my-5">
+        <section class="container catagory my-5">
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 col-12 ">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
@@ -137,7 +141,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="p-3">
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                     </div>
                   </div>
                 </div>
@@ -149,7 +153,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="p-3">
-                        <button class="btn btn-warning">Buy Now</button>
+                        <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                     </div>
                   </div>
                 </div>
@@ -161,7 +165,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="p-3">
-                        <button class="btn btn-warning">Buy Now</button>
+                        <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                     </div>
                   </div>
                 </div>
@@ -179,7 +183,7 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     </div>
                     <div class="p-3">
-                      <button class="btn btn-warning">Buy Now</button>
+                      <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                     </div>
                   </div>
                 </div>
@@ -191,7 +195,7 @@
                       <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                     </div>
                     <div class="p-3">
-                        <button class="btn btn-warning">Buy Now</button>
+                        <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                     </div>
                   </div>
                 </div>
@@ -203,20 +207,20 @@
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
                     <div class="p-3">
-                        <button class="btn btn-warning">Buy Now</button>
+                        <button class="btn panda_btn">Buy Now <i class="fas fa-angle-double-right"></i></button>
                     </div>
                   </div>
                 </div>
               </div>
         </section>
         <!-- Subscribe -->
-        <section id="subscribe" style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center bg-info">
+        <section id="subscribe" style="height: 300px;" class="container rounded-3 d-flex justify-content-center align-items-center panda_bg">
             <div>
                 <h1>LET'S STAY IN TOUCH</h1>
                 <p>Get updates on sales, specials and more</p>
-                <input type="email" name="" id="" placeholder="Type your email">
+                <input class="form-control" type="email" name="" id="" placeholder="Type your email">
                 <br>
-                <button class="btn btn-warning" type="submit">Submit</button>
+                <button class="btn panda_btn" type="submit">Submit</button>
             </div>
         </section>
     </main>
