video:8 Site deploy in Netlify

--- a/Milestone_3/Module_13/01_About Module 13.html
+++ b/Milestone_3/Module_13/01_About Module 13.html
@@ -56,6 +56,13 @@
             <li>Custom CSS</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>08.Have fun deploying to Netlify via drag and drop
+        </h2>
+        <ul>
+            <li>Site deploy in Netlify</li>
+        </ul>
+    </div>
 
 </body>
 </html>
