video:9 exporing bootstrap example and

--- a/Milestone_3/Module_13/01_About Module 13.html
+++ b/Milestone_3/Module_13/01_About Module 13.html
@@ -63,6 +63,13 @@
             <li>Site deploy in Netlify</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>09.Module summary, Code Recap, extra practice
+        </h2>
+        <ul>
+            <li>Exploring bootstrap expample and theme</li>
+        </ul>
+    </div>
 
 </body>
 </html>
