video_2: Tailwind overview

--- a/Milestone_3/Module_14/01_About Module 14.html
+++ b/Milestone_3/Module_14/01_About Module 14.html
@@ -14,6 +14,13 @@
             <li>Ready for tailwind exploring</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.Tailwind utility classes and comparison with bootstrap
+        </h2>
+        <ul>
+            <li>Overview tailwind</li>
+        </ul>
+    </div>
 
 </body>
 </html>
