--- a/Milestone_3/Module_14/index.html
+++ b/Milestone_3/Module_14/index.html
@@ -9,7 +9,7 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum sint alias aut vel sed facere repudiandae facilis nisi aliquam culpa?</h1>
-    <h3>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae ex, quae saepe voluptatem facilis optio porro numquam nostrum dolorem consectetur!</h3>
+    <h1 class="text-6xl	text-justify text-pink-600 bg-yellow-100 border rounded-lg border-red-600 mx-8	 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum sint alias aut vel sed facere repudiandae facilis nisi aliquam culpa?</h1>
+    <h3 class="text-3xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae ex, quae saepe voluptatem facilis optio porro numquam nostrum dolorem consectetur!</h3>
 </body>
 </html>
