video_3: Use tailwind flex box

--- a/Milestone_3/Module_14/01_About Module 14.html
+++ b/Milestone_3/Module_14/01_About Module 14.html
@@ -21,6 +21,13 @@
             <li>Overview tailwind</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.Layout container and Flexbox using Tailwind
+        </h2>
+        <ul>
+            <li>Use flexbox</li>
+        </ul>
+    </div>
 
 </body>
 </html>
