--- a/Milestone_3/Module_14/index.html
+++ b/Milestone_3/Module_14/index.html
@@ -9,7 +9,19 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-6xl	text-justify text-pink-600 bg-yellow-100 border rounded-lg border-red-600 mx-8	 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum sint alias aut vel sed facere repudiandae facilis nisi aliquam culpa?</h1>
-    <h3 class="text-3xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae ex, quae saepe voluptatem facilis optio porro numquam nostrum dolorem consectetur!</h3>
+    <section>
+        <h1 class="text-6xl	text-justify text-pink-600 bg-yellow-100 border rounded-lg border-red-600 mx-8	 ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum sint alias aut vel sed facere repudiandae facilis nisi aliquam culpa?</h1>
+        <h3 class="text-3xl">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae ex, quae saepe voluptatem facilis optio porro numquam nostrum dolorem consectetur!</h3>
+    </section>
+    <section class="container">
+        <div class="flex justify-center">
+            <div class="first w-24 mr-4">
+                <h1 class="h-48 text-5xl bg-purple-600 rounded flex justify-center items-center">1</h1>
+            </div>
+            <div class="second w-24 h-24">
+                <h1 class="h-48 text-5xl bg-purple-400 rounded flex justify-center items-center">2</h1>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
