--- a/Milestone_3/Module_14/index.html
+++ b/Milestone_3/Module_14/index.html
@@ -23,5 +23,32 @@
             </div>
         </div>
     </section>
+
+    <!-- Exploring Grid -->
+    <section class="bg-red-400 ">
+        <h1 class="text-4xl">Grid Section</h1>
+        <div class="grid grid-cols-4 gap-4">
+            <div class="row-span-2 bg-indigo-300 p-10">1</div>
+            <div class="col-span-2 bg-indigo-300 p-10">2</div>
+            <div class="row-span-2 bg-indigo-300 p-10">3</div>
+            <div class="col-span-2 bg-indigo-300 p-10">4</div>
+            <div class="bg-indigo-300 p-10">5</div>
+            <div class="bg-indigo-300 p-10">6</div>
+            <div class="bg-indigo-300 p-10">7</div>
+            <div class="bg-indigo-300 p-10">8</div>
+            <div class="bg-indigo-300 p-10">9</div>
+            <div class="bg-indigo-300 p-10">10</div>
+            <div class="bg-indigo-300 p-10">11</div>
+            <div class="bg-indigo-300 p-10">12</div>
+            <div class="bg-indigo-300 p-10">13</div>
+            <div class="bg-indigo-300 p-10">14</div>
+            <div class="bg-indigo-300 p-10">15</div>
+            <div class="bg-indigo-300 p-10">16</div>
+            <div class="bg-indigo-300 p-10">17</div>
+            <div class="bg-indigo-300 p-10">18</div>
+            <div class="bg-indigo-300 p-10">19</div>
+            <div class="bg-indigo-300 p-10">20</div>
+        </div>
+    </section>
 </body>
 </html>
