--- a/Milestone_3/Module_14/01_About Module 14.html
+++ b/Milestone_3/Module_14/01_About Module 14.html
@@ -42,6 +42,13 @@
             <li>Penguine project setup</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06.Apply header section grid layout and svg hero icons
+        </h2>
+        <ul>
+            <li>Slide complate</li>
+        </ul>
+    </div>
 
 </body>
 </html>
