video_7: Weman Jacket section

--- a/Milestone_3/Module_14/01_About Module 14.html
+++ b/Milestone_3/Module_14/01_About Module 14.html
@@ -49,6 +49,13 @@
             <li>Slide complate</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>07.Make header responsive, Button gradient, card setup
+        </h2>
+        <ul>
+            <li>Weman Jacket section</li>
+        </ul>
+    </div>
 
 </body>
 </html>
