--- a/Milestone_3/Module_14/penguin.html
+++ b/Milestone_3/Module_14/penguin.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header Start -->
     <header class="bg-yellow-100 ">
-        <section class="container flex justify-around items-center py-12">
+        <section class="container md:flex justify-around items-center py-12 px-4">
             <div class="space-y-6">
                 <h1 class="text-7xl font-bold uppercase">
                     <span class="text-yellow-400">Be The penguin</span>
@@ -32,9 +32,28 @@
                 <img src="images/model.png" alt="">
             </div>
         </section>
-        
     </header>
     <!-- Header End -->
+
+    <!-- Main Start -->
+    <main>
+        <!-- Wemon Jacket Section -->
+        <section class="container px-16 mx-auto py-12">
+            <h1 class="uppercase text-3xl font-bold text-gray-700">Woman Jacket</h1>
+            <div class="grid grid-cols-3 gap-7 ">
+                <div class="rounded-2xl shadow-lg">
+                    <img src="images/jacket-1.png" alt="">
+                </div>
+                <div class="">
+                    <img src="images/jacket-2.png" alt="">
+                </div>
+                <div class="">
+                    <img src="images/jacket-3.png" alt="">
+                </div>
+            </div>
+        </section>
+    </main>
+    <!-- Main End -->
     
 </body>
 </html>
