video_8: Woman Jacket section info

--- a/Milestone_3/Module_14/01_About Module 14.html
+++ b/Milestone_3/Module_14/01_About Module 14.html
@@ -53,7 +53,14 @@
         <h2>07.Make header responsive, Button gradient, card setup
         </h2>
         <ul>
-            <li>Weman Jacket section</li>
+            <li>Woman Jacket section</li>
+        </ul>
+    </div>
+    <div class="video">
+        <h2>08.Setup custom card and card grid using tailwind css
+        </h2>
+        <ul>
+            <li>Woman Jacket section info</li>
         </ul>
     </div>
 
