--- a/Milestone_3/Module_14/penguin.html
+++ b/Milestone_3/Module_14/penguin.html
@@ -39,16 +39,46 @@
     <main>
         <!-- Wemon Jacket Section -->
         <section class="container px-16 mx-auto py-12">
-            <h1 class="uppercase text-3xl font-bold text-gray-700">Woman Jacket</h1>
-            <div class="grid grid-cols-3 gap-7 ">
-                <div class="rounded-2xl shadow-lg">
-                    <img src="images/jacket-1.png" alt="">
+            <h1 class="uppercase text-3xl font-bold text-gray-700 my-4">Woman Jacket</h1>
+            <div class="grid grid-cols-3 gap-7">
+                <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
+                    <img class="rounded-2xl bg-gray-200" src="images/jacket-1.png" alt="">
+                    <h4 class="font-bold text-3xl">Yellow Coat Jacket </h4>
+                    <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="font-black text-4xl text-yellow-400">$234</h2>
+                        <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                          </svg> Buy Now
+                        </button>
+                    </div>
                 </div>
-                <div class="">
-                    <img src="images/jacket-2.png" alt="">
+                <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
+                    <img class="rounded-2xl bg-gray-200" src="images/jacket-2.png" alt="">
+                    <h4 class="font-bold text-3xl">Yellow Coat Jacket </h4>
+                    <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="font-black text-4xl text-yellow-400">$234</h2>
+                        <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                          </svg> Buy Now
+                        </button>
+                    </div>
                 </div>
-                <div class="">
-                    <img src="images/jacket-3.png" alt="">
+                <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
+                    <img class="rounded-2xl bg-gray-200" src="images/jacket-3.png" alt="">
+                    <h4 class="font-bold text-3xl">Yellow Coat Jacket </h4>
+                    <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between">
+                        <h2 class="font-black text-4xl text-yellow-400">$234</h2>
+                        <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                          </svg> Buy Now
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
