video_9: Feature Section and Image Height

--- a/Milestone_3/Module_14/01_About Module 14.html
+++ b/Milestone_3/Module_14/01_About Module 14.html
@@ -63,6 +63,13 @@
             <li>Woman Jacket section info</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>09.Responsive grid card interesting grid and image size
+        </h2>
+        <ul>
+            <li>Feature Section and Image Height</li>
+        </ul>
+    </div>
 
 </body>
 </html>
