--- a/Milestone_3/Module_14/penguin.html
+++ b/Milestone_3/Module_14/penguin.html
@@ -14,7 +14,7 @@
 <body>
     <!-- Header Start -->
     <header class="bg-yellow-100 ">
-        <section class="container md:flex justify-around items-center py-12 px-4">
+        <section class="container mx-auto md:flex justify-around items-center py-12 px-4">
             <div class="space-y-6">
                 <h1 class="text-7xl font-bold uppercase">
                     <span class="text-yellow-400">Be The penguin</span>
@@ -40,12 +40,14 @@
         <!-- Wemon Jacket Section -->
         <section class="container px-16 mx-auto py-12">
             <h1 class="uppercase text-3xl font-bold text-gray-700 my-4">Woman Jacket</h1>
-            <div class="grid grid-cols-3 gap-7">
+            <div class="grid lg:grid-cols-3 gap-7">
                 <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
-                    <img class="rounded-2xl bg-gray-200" src="images/jacket-1.png" alt="">
+                    <div class="rounded-2xl bg-gray-200 py-6">
+                        <img class="h-64 mx-auto" src="images/jacket-1.png" alt="">
+                    </div>
                     <h4 class="font-bold text-3xl">Yellow Coat Jacket </h4>
                     <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <div class="flex justify-between">
+                    <div class="lg:flex justify-between">
                         <h2 class="font-black text-4xl text-yellow-400">$234</h2>
                         <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
                             <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -55,10 +57,12 @@
                     </div>
                 </div>
                 <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
-                    <img class="rounded-2xl bg-gray-200" src="images/jacket-2.png" alt="">
-                    <h4 class="font-bold text-3xl">Yellow Coat Jacket </h4>
+                    <div class="rounded-2xl bg-gray-200 py-6">
+                        <img class="h-64 mx-auto" src="images/jacket-2.png" alt="">
+                    </div>
+                    <h4 class="font-bold text-3xl">Ladies Jacket </h4>
                     <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <div class="flex justify-between">
+                    <div class="lg:flex justify-between">
                         <h2 class="font-black text-4xl text-yellow-400">$234</h2>
                         <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
                             <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -68,10 +72,12 @@
                     </div>
                 </div>
                 <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
-                    <img class="rounded-2xl bg-gray-200" src="images/jacket-3.png" alt="">
-                    <h4 class="font-bold text-3xl">Yellow Coat Jacket </h4>
+                    <div class="rounded-2xl bg-gray-200 py-6">
+                        <img class="h-64 mx-auto" src="images/jacket-3.png" alt="">
+                    </div>
+                    <h4 class="font-bold text-3xl">Woman Leather Jacket </h4>
                     <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                    <div class="flex justify-between">
+                    <div class="lg:flex justify-between">
                         <h2 class="font-black text-4xl text-yellow-400">$234</h2>
                         <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
                             <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -80,6 +86,86 @@
                         </button>
                     </div>
                 </div>
+            </div>
+        </section>
+        <!-- Man Jacket Section -->
+        <section class="container px-16 mx-auto py-12">
+            <h1 class="uppercase text-3xl font-bold text-gray-700 my-4">Man Jacket</h1>
+            <div class="grid lg:grid-cols-3 gap-7">
+                <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
+                    <div class="rounded-2xl bg-gray-200 py-6">
+                        <img class="h-64 mx-auto" src="images/jacket-4.png" alt="">
+                    </div>
+                    <h4 class="font-bold text-3xl">Snowboard Jacket Mens</h4>
+                    <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="lg:flex justify-between">
+                        <h2 class="font-black text-4xl text-yellow-400">$234</h2>
+                        <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                          </svg> Buy Now
+                        </button>
+                    </div>
+                </div>
+                <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
+                    <div class="rounded-2xl bg-gray-200 py-6">
+                        <img class="h-64 mx-auto" src="images/jacket-5.png" alt="">
+                    </div>
+                    <h4 class="font-bold text-3xl">Man Leather Jackets</h4>
+                    <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="lg:flex justify-between">
+                        <h2 class="font-black text-4xl text-yellow-400">$234</h2>
+                        <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                          </svg> Buy Now
+                        </button>
+                    </div>
+                </div>
+                <div class="rounded-2xl shadow-lg p-4 space-y-6 ">
+                    <div class="rounded-2xl bg-gray-200 py-6">
+                        <img class="h-64 mx-auto" src="images/jacket-6.png" alt="">
+                    </div>
+                    <h4 class="font-bold text-3xl">Man Casual Jackets</h4>
+                    <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="lg:flex justify-between">
+                        <h2 class="font-black text-4xl text-yellow-400">$234</h2>
+                        <button class="text-white bg-gradient-to-r from-green-400 to-blue-500 px-7 py-4 font-medium rounded-xl uppercase">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="inline h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" />
+                          </svg> Buy Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Feature Section -->
+        <section class="container px-16 mx-auto my-20">
+            <div class="grid lg:grid-cols-2 gap-5">
+                <div class="flex items-center ">
+                    <img class="w-20 h-20 ml-4" src="icons/image 12.png" alt="">
+                    <div class="info ml-8">
+                        <h5 class="text-2xl font-bold">Find the Perfect Fit</h5>
+                        <p class="w-2/3">Everybody is different, which is why we offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="lg:row-span-3">
+                    <img src="images/shopping.png" alt="">
+                </div>
+                <div class="flex items-center ">
+                    <img class="w-20 h-20 ml-4" src="icons/image 13.png" alt="">
+                    <div class="info ml-8">
+                        <h5 class="text-2xl font-bold">Free Exchanges</h5>
+                        <p class="w-2/3">One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+                </div> 
+                <div class="flex items-center ">
+                    <img class="w-20 h-20 ml-4" src="icons/image 14.png" alt="">
+                    <div class="info ml-8">
+                        <h5 class="text-2xl font-bold">Contact Our Seller</h5>
+                        <p class="w-2/3">They are here to help you. That's quite literally what we pay them for.</p>
+                    </div>
+                </div> 
             </div>
         </section>
     </main>
