--- a/Milestone_3/Module_14/penguin.html
+++ b/Milestone_3/Module_14/penguin.html
@@ -139,8 +139,8 @@
                 </div>
             </div>
         </section>
-        <!-- Feature Section -->
-        <section class="container px-16 mx-auto my-20">
+        <!--Feature Section Grid -->
+        <!-- <section class="container px-16 mx-auto my-20">
             <div class="grid lg:grid-cols-2 gap-5">
                 <div class="flex items-center ">
                     <img class="w-20 h-20 ml-4" src="icons/image 12.png" alt="">
@@ -167,7 +167,41 @@
                     </div>
                 </div> 
             </div>
-        </section>
+        </section>  -->
+        
+        <!-- Feature section flex -->
+        <section class="container px-16 mx-auto my-20">
+            <div class="lg:flex justify-between items-center">
+                <div class="lg:w-1/2 space-y-6">
+                    <div class="flex items-center ">
+                        <img class="w-20 h-20 ml-4" src="icons/image 12.png" alt="">
+                        <div class="info ml-8">
+                            <h5 class="text-2xl font-bold">Find the Perfect Fit</h5>
+                            <p class="w-2/3">Everybody is different, which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                    <div class="flex items-center ">
+                        <img class="w-20 h-20 ml-4" src="icons/image 13.png" alt="">
+                        <div class="info ml-8">
+                            <h5 class="text-2xl font-bold">Free Exchanges</h5>
+                            <p class="w-2/3">One of the many reasons you can shop with peace of mind.</p>
+                        </div>
+                    </div> 
+                    <div class="flex items-center ">
+                        <img class="w-20 h-20 ml-4" src="icons/image 14.png" alt="">
+                        <div class="info ml-8">
+                            <h5 class="text-2xl font-bold">Contact Our Seller</h5>
+                            <p class="w-2/3">They are here to help you. That's quite literally what we pay them for.</p>
+                        </div>
+                    </div> 
+                </div>
+                <div class="lg:w-1/2 mt-5">   
+                    <div class="">
+                        <img src="images/shopping.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section> 
     </main>
     <!-- Main End -->
     
