video_10: About tailwind css

--- a/Milestone_3/Module_14/01_About Module 14.html
+++ b/Milestone_3/Module_14/01_About Module 14.html
@@ -70,6 +70,13 @@
             <li>Feature Section and Image Height</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>10.How to select Right CSS framework for your project
+        </h2>
+        <ul>
+            <li>About Tailwind blocks and componantes</li>
+        </ul>
+    </div>
 
 </body>
 </html>
