--- a/Milestone_3/Module_14.5/01_About Module 14.5.html
+++ b/Milestone_3/Module_14.5/01_About Module 14.5.html
@@ -14,6 +14,13 @@
             <li>Create private repo and netlify link and ready for Nike React</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.Practice Nike React using bootstrap in private repo
+        </h2>
+        <ul>
+            <li>How to submit assignment</li>
+        </ul>
+    </div>
 
 </body>
 </html>
