--- a/Milestone_3/Module_14.5/index.html
+++ b/Milestone_3/Module_14.5/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nike React</title>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Font Awesome CSS -->
+    <script src="https://kit.fontawesome.com/ab4a239ae2.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Nike React</h1>
+    <!-- Header Start -->
+    <header class="">
+        <!-- Slide -->
+        <section class="container bg-info">
+            <div class=" py-5 row d-flex justify-content-between align-items-center">
+                <div class="col-lg-6">
+                    <img class="w-100" src="images/Group 33092.png" alt="">
+                </div>
+                <div class="col-lg-5">
+                    <h1 class="fs-1 fw-bold text-uppercase">
+                        <span class="text-warning">Nike React</span><br>
+                        <span class="">Infinity Run 2</span>
+                    </h1>
+                    <p class="w-75">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <button class="rounded bg-primary border-0 text-white py-2 px-4"><i class="fas fa-shopping-cart"></i> Buy Now</button>
+                </div>
+            </div>
+        </section>
+    </header>
+    <!-- Header End -->
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
