--- a/Milestone_3/Module_15.5/01_About Module 15.5.html
+++ b/Milestone_3/Module_15.5/01_About Module 15.5.html
@@ -14,6 +14,13 @@
             <li>Collage album bu three column row</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.Nested row and column layout with no gutter
+        </h2>
+        <ul>
+            <li>Vacation album by no gutter column row</li>
+        </ul>
+    </div>
 
 </body>
 </html>
