m_15 v_3: How to use devtool

--- a/Milestone_3/Module_15.5/01_About Module 15.5.html
+++ b/Milestone_3/Module_15.5/01_About Module 15.5.html
@@ -21,6 +21,13 @@
             <li>Vacation album by no gutter column row</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.How to debug CSS and HTML using devtool
+        </h2>
+        <ul>
+            <li>How to use devtool</li>
+        </ul>
+    </div>
 
 </body>
 </html>
