--- a/Milestone_3/Module_15.5/01_About Module 15.5.html
+++ b/Milestone_3/Module_15.5/01_About Module 15.5.html
@@ -35,6 +35,13 @@
             <li>Use Before after</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>05.Run Javascript in Visual Studio Code to get ready
+        </h2>
+        <ul>
+            <li>Ready for JS</li>
+        </ul>
+    </div>
 
 </body>
 </html>
