m-16 v-3: how to write numaric, string and boolen value in variable

--- a/Milestone_4/Module_16/01_About Module 16.html
+++ b/Milestone_4/Module_16/01_About Module 16.html
@@ -21,6 +21,13 @@
             <li>how to declare variable</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.Variable type, Numeric, String, Boolean
+        </h2>
+        <ul>
+            <li>how to write numaric, string, and boolean variable</li>
+        </ul>
+    </div>
 
 </body>
 </html>
