m-16 v-5: Mathmatical Operation in JS

--- a/Milestone_4/Module_16/01_About Module 16.html
+++ b/Milestone_4/Module_16/01_About Module 16.html
@@ -35,6 +35,13 @@
             <li>variable name declare mathod</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>05.Simple Mathematical operations in JavaScript
+        </h2>
+        <ul>
+            <li>How to mathmatical operation in js</li>
+        </ul>
+    </div>
 
 </body>
 </html>
