m-16 v-8: Check variable types and after float toFixed

--- a/Milestone_4/Module_16/01_About Module 16.html
+++ b/Milestone_4/Module_16/01_About Module 16.html
@@ -56,6 +56,13 @@
             <li>convert srting to number</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>08.Different variable types and use toFixed with parseFloat
+        </h2>
+        <ul>
+            <li>check variable types</li>
+        </ul>
+    </div>
 
 </body>
 </html>
