m-16 v-9: remainder module and module summary

--- a/Milestone_4/Module_16/01_About Module 16.html
+++ b/Milestone_4/Module_16/01_About Module 16.html
@@ -63,6 +63,13 @@
             <li>check variable types</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>09.Module Summary and remainder modulus
+        </h2>
+        <ul>
+            <li>remainder module and module summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
