m-17 v-4: Array index and set value by index

--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -21,6 +21,13 @@
             <li>Array declare and length</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.Array index, get and set by index, indexOf
+        </h2>
+        <ul>
+            <li>Array index and set value by index</li>
+        </ul>
+    </div>
 
 </body>
 </html>
