m-17 v-6: condition check by if else

--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -42,6 +42,13 @@
             <li>comparison between two value</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06 Make conditional decision, if-else, comparison
+        </h2>
+        <ul>
+            <li>if else condition</li>
+        </ul>
+    </div>
 
 </body>
 </html>
