m-17 v-8: Nested condition check

--- a/Milestone_4/Module_17/01_About Module 17.html
+++ b/Milestone_4/Module_17/01_About Module 17.html
@@ -56,6 +56,13 @@
             <li>Multiple conditions check</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>08.(Advanced) Multi stage condition and nested conditions
+        </h2>
+        <ul>
+            <li>Nested condition check</li>
+        </ul>
+    </div>
 
 </body>
 </html>
