--- a/Milestone_4/Module_17.5/01_About Module 17.5.html
+++ b/Milestone_4/Module_17.5/01_About Module 17.5.html
@@ -28,6 +28,13 @@
             <li>even and odd number</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>04.For loop, how for loop works, while vs for loop
+        </h2>
+        <ul>
+            <li>For loop</li>
+        </ul>
+    </div>
 
 </body>
 </html>
