m-17.5  v-5: array print in for loop

--- a/Milestone_4/Module_17.5/01_About Module 17.5.html
+++ b/Milestone_4/Module_17.5/01_About Module 17.5.html
@@ -35,6 +35,13 @@
             <li>For loop</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>05.Recap loop, run a loop for each element of an array
+        </h2>
+        <ul>
+            <li>array in for loop</li>
+        </ul>
+    </div>
 
 </body>
 </html>
