m-18 v-2: How to write function

--- a/Milestone_4/Module_18/01_About Module 18.html
+++ b/Milestone_4/Module_18/01_About Module 18.html
@@ -14,6 +14,13 @@
             <li>Recape variable, array and condition,Loop</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>02.Declare a Function, call function, function vs loop
+        </h2>
+        <ul>
+            <li>How to write function</li>
+        </ul>
+    </div>
 
 </body>
 </html>
