m-18 v-5: How to object Declare

--- a/Milestone_4/Module_18/01_About Module 18.html
+++ b/Milestone_4/Module_18/01_About Module 18.html
@@ -35,6 +35,13 @@
             <li>Function er multiple perameter and return</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>05.Declare multiple objects with multiple properties
+        </h2>
+        <ul>
+            <li>How to object Declare</li>
+        </ul>
+    </div>
 
 </body>
 </html>
