m-18 v-6: objact read and value change

--- a/Milestone_4/Module_18/01_About Module 18.html
+++ b/Milestone_4/Module_18/01_About Module 18.html
@@ -42,6 +42,13 @@
             <li>How to object Declare</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>06.multiple ways to get and set object property
+        </h2>
+        <ul>
+            <li>objact read and value change</li>
+        </ul>
+    </div>
 
 </body>
 </html>
