m-18 v-7: How to write switch case

--- a/Milestone_4/Module_18/01_About Module 18.html
+++ b/Milestone_4/Module_18/01_About Module 18.html
@@ -49,6 +49,13 @@
             <li>objact read and value change</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>07.(optional) Javascript switch case break and default
+        </h2>
+        <ul>
+            <li>How to write switch case</li>
+        </ul>
+    </div>
 
 </body>
 </html>
