m-19 v-3: Odd Even check

--- a/Milestone_4/Module_19/01_About Module 19.html
+++ b/Milestone_4/Module_19/01_About Module 19.html
@@ -21,6 +21,13 @@
             <li>Recape pervious js and variable declare</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>03.Check even and odd number using function
+        </h2>
+        <ul>
+            <li>Odd Even check</li>
+        </ul>
+    </div>
 
 </body>
 </html>
