m-20 v-4: sum of an array value

--- a/Milestone_4/Module_20/01_About Module 20.html
+++ b/Milestone_4/Module_20/01_About Module 20.html
@@ -28,6 +28,13 @@
             <li>Variable swapping</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>04.Sum of all numbers in an array
+        </h2>
+        <ul>
+            <li>Variable swapping</li>
+        </ul>
+    </div>
 
 </body>
 </html>
