m-21 v-5: Add and Multiply

--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -35,6 +35,13 @@
             <li>Input error fix</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>05.Use add and multiplication to calculate wood requirements
+        </h2>
+        <ul>
+            <li>Add and Multiply</li>
+        </ul>
+    </div>
 
 </body>
 </html>
