--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -63,6 +63,13 @@
             <li>Calculation product price with Quantity</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>09.(advanced) Travelling in a Jungle and counting wild animals
+        </h2>
+        <ul>
+            <li>Calculation animals</li>
+        </ul>
+    </div>
 
 </body>
 </html>
