--- a/Milestone_4/Module_21/01_About Module 21.html
+++ b/Milestone_4/Module_21/01_About Module 21.html
@@ -70,6 +70,13 @@
             <li>Calculation animals</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>10.Module Summary and important of problem solving
+        </h2>
+        <ul>
+            <li>About summary</li>
+        </ul>
+    </div>
 
 </body>
 </html>
