m-22.5 v-2: factorial by recursion

--- a/Milestone_4/Module_22.5/01_About Module 22.html
+++ b/Milestone_4/Module_22.5/01_About Module 22.html
@@ -14,6 +14,13 @@
             <li>Understanding the recursive function</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Explore Factorial Recursion using a for loop concept
+        </h2>
+        <ul>
+            <li>Understanding factorial recursion</li>
+        </ul>
+    </div>
 
 </body>
 </html>
