m-23 v-2: Js linkup with HTML

--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -14,6 +14,13 @@
             <li>Discuss about javascript</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>2.Create Script tag and connect external Script file
+        </h2>
+        <ul>
+            <li>Js linkup with HTML</li>
+        </ul>
+    </div>
 
 </body>
 </html>
