m-13 v-3: What is DOM

--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -21,6 +21,13 @@
             <li>Js linkup with HTML</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>3.What is DOM (Document Object Model)
+        </h2>
+        <ul>
+            <li>What is DOM</li>
+        </ul>
+    </div>
 
 </body>
 </html>
