m-23 v-5: Get HTML elements by ID

--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -35,6 +35,13 @@
             <li>Get HTML elements</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>5.Capture and change Element by using getElementById
+        </h2>
+        <ul>
+            <li>Get HTML elements by ID</li>
+        </ul>
+    </div>
 
 </body>
 </html>
