m-23 v-7: Set attribute by JS

--- a/Milestone_5/Module_23/03.dom.html
+++ b/Milestone_5/Module_23/03.dom.html
@@ -53,6 +53,10 @@
             blog.style.padding = "5px";
         }
 
+        // set Attribuite
+        const blogs2 = document.getElementById('blogs');
+        blogs2.setAttribute('title',"This tooltip add by JS");
+
     </script>
 </body>
 </html>
