--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -49,6 +49,13 @@
             <li>Get HTML elements by classname and querySelector</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>7.NodeList, htmlcollection, setAttribute, parentNode, childnodes
+        </h2>
+        <ul>
+            <li>Get HTML elements by classname and querySelector</li>
+        </ul>
+    </div>
 
 </body>
 </html>
