--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -56,6 +56,13 @@
             <li>Get HTML elements by classname and querySelector</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>8.Create HTML elements using Javascript and appendChild
+        </h2>
+        <ul>
+            <li>Create elements</li>
+        </ul>
+    </div>
 
 </body>
 </html>
