m-23 v-9: Recape the module

--- a/Milestone_5/Module_23/01_About Module 23.html
+++ b/Milestone_5/Module_23/01_About Module 23.html
@@ -63,6 +63,13 @@
             <li>Create elements</li>
         </ul>
     </div>
+    <div class="video">
+        <h2>9.Module summary and DOM Review
+        </h2>
+        <ul>
+            <li>Recape the module</li>
+        </ul>
+    </div>
 
 </body>
 </html>
