--- a/Milestone_5/Module_23/03.dom.html
+++ b/Milestone_5/Module_23/03.dom.html
@@ -61,7 +61,7 @@
         const article = document.createElement("article");
         article.classList.add("bolg");
 
-        const h3 = doucment.createElement("h3");
+        const h3 = document.createElement("h3");
         h3.innerText = "JavaScript Blog";
         const p = document.createElement("p");
         p.innerText = "This blog is added by Javaxcript"
